--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 					<a class="email" href="mailto:mail@comfortcity.spb.ru">mail@comfortcity.spb.ru</a>
 				</div>
 				<div class="cont">
-					<p class="address">199178, Санкт-Петербург, наб. реки Смоленки, дом 3, корп. 2, офис 34-Н</pa>
+					<p class="address">199178, Санкт-Петербург, наб. реки Смоленки, дом 3, корп. 2, офис 34-Н</p>
 				</div>
 				<a class="button" href="#">Заказать проект</a>
 			</div>
