--- a/direction.html
+++ b/direction.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="item">
                     <div class="img">
-                        <a href="direction.html">
+                        <a href="direction_ditails.html">
                             <img src="images/directions_2.jpg" alt="">
                             <span class="more">Подробнее</span>
                         </a>
