--- a/direction_ditails.html
+++ b/direction_ditails.html
@@ -86,7 +86,7 @@
                 <a href="contacts.html" class="button">Задать вопрос</a>
             </div>
 
-            <div class="text_block">
+            <div class="text_block icon_bg">
                 <h2>Описание направления второй текстовый блок</h2>
                 <div class="text_and_image">
                     <div class="image left_image">
