--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 	<div class="main_section" id="main_screen">
 		<div class="main_slider">
 			<div class="item">
-				<div class="image">
-					<img src="images/bg_main_slider1.jpg">
+				<div class="image" style="background-image: url(images/bg_main_slider1.jpg);">
+					<!-- <img src="images/bg_main_slider1.jpg"> -->
 				</div>
 				<div class="page_width">
 					<div class="text">
@@ -77,8 +77,8 @@
 				</div> 
 			</div>
 			<div class="item">
-				<div class="image">
-					<img src="images/bg_main_slider2.jpg">
+				<div class="image" style="background-image: url(images/bg_main_slider2.jpg);">
+					<!-- <img src="images/bg_main_slider2.jpg"> -->
 				</div>
 				<div class="page_width">
 					<div class="text">
@@ -89,8 +89,8 @@
 				</div> 
 			</div>
 			<div class="item">
-				<div class="image">
-					<img src="images/bg_main_slider3.jpg">
+				<div class="image" style="background-image: url(images/bg_main_slider3.jpg);">
+					<!-- <img src="images/bg_main_slider3.jpg"> -->
 				</div>
 				<div class="page_width">
 					<div class="text">
