--- a/direction.html
+++ b/direction.html
@@ -82,7 +82,7 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Ландшафтное проектирование и дизайн</p>
+                        <a href="direction_ditails.html">Ландшафтное проектирование и дизайн</a>
                     </div>
                 </div>
                 <div class="item">
@@ -93,7 +93,7 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Здоровье и активность пожилых людей</p>
+                        <a href="direction_ditails.html">Здоровье и активность пожилых людей</a>
                     </div>
                 </div>
                 <div class="item">
@@ -104,7 +104,7 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Городская парковая мебель</p>
+                        <a href="direction_ditails.html">Городская парковая мебель</a>
                     </div>
                 </div>
                 <div class="item">
@@ -115,7 +115,7 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Озеленение</p>
+                        <a href="direction_ditails.html">Озеленение</a>
                     </div>
                 </div>
                 <div class="item">
@@ -126,7 +126,7 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Освещение и wi-fi</p>
+                        <a href="direction_ditails.html">Освещение и wi-fi</a>
                     </div>
                 </div>
                 <div class="item">
@@ -137,7 +137,7 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Работы по благоустройству среды</p>
+                        <a href="direction_ditails.html">Работы по благоустройству среды</a>
                     </div>
                 </div>
                 <div class="item">
@@ -148,7 +148,7 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Детские игровые площадки</p>
+                        <a href="direction_ditails.html">Детские игровые площадки</a>
                     </div>
                 </div>
                 <div class="item">
@@ -159,7 +159,7 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Площадки для дрессировки и выгула собак</p>
+                        <a href="direction_ditails.html">Площадки для дрессировки и выгула собак</a>
                     </div>
                 </div>
                 <div class="item">
@@ -170,7 +170,7 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Малые Архитектурные Формы</p>
+                        <a href="direction_ditails.html">Малые Архитектурные Формы</a>
                     </div>
                 </div>
                 <div class="item">
@@ -181,7 +181,7 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Спортивные площадки и тренажеры</p>
+                        <a href="direction_ditails.html">Спортивные площадки и тренажеры</a>
                     </div>
                 </div>
                 <div class="item">
@@ -192,7 +192,7 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Покрытия для площадок</p>
+                        <a href="direction_ditails.html">Покрытия для площадок</a>
                     </div>
                 </div>
                 <div class="item">
@@ -203,11 +203,10 @@
                         </a>
                     </div>
                     <div class="text">
-                        <p>Конструкции для лазания</p>
+                        <a href="direction_ditails.html">Конструкции для лазания</a>
                     </div>
                 </div>
             </div>
-            
 
             <div class="text">
                 <h3>Сео текст</h3>
