--- a/direction_ditails.html
+++ b/direction_ditails.html
@@ -170,7 +170,7 @@
                             </a>
                         </div>
                         <div class="text">
-                            <p>Ландшафтное проектирование и дизайн</p>
+                            <a href="direction_ditails.html">Ландшафтное проектирование и дизайн</a>
                         </div>
                     </div>
                     <div class="item">
@@ -181,7 +181,7 @@
                             </a>
                         </div>
                         <div class="text">
-                            <p>Здоровье и активность пожилых людей</p>
+                            <a href="direction_ditails.html">Здоровье и активность пожилых людей</a>
                         </div>
                     </div>
                     <div class="item">
@@ -192,7 +192,7 @@
                             </a>
                         </div>
                         <div class="text">
-                            <p>Городская парковая мебель</p>
+                            <a href="direction_ditails.html">Городская парковая мебель</a>
                         </div>
                     </div>
                     <div class="item">
@@ -203,7 +203,7 @@
                             </a>
                         </div>
                         <div class="text">
-                            <p>Озеленение</p>
+                            <a href="direction_ditails.html">Озеленение</a>
                         </div>
                     </div>
                 </div>
