--- a/direction.html
+++ b/direction.html
@@ -22,7 +22,7 @@
 	<script type="text/javascript" src="js/script.js"></script> 
 	
 </head>
-<body id="index">
+<body>
     <div class="wrapper">
 	<!-- шапка -->
 	
