--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@
     
     
 	<!-- Наши направления -->
-	<div class="main_section">
+	<div class="main_section directions_block">
 	    <div class="page_width">
 			<h2>Другие наши направления</h2>
 			<a href="directions.html" class="all_link">Все направления</a>
