--- a/direction_ditails.html
+++ b/direction_ditails.html
@@ -206,7 +206,7 @@
 	</div>
     
     <!--Контент-->
-    <div class="main_section">
+    <div class="main_section gallery_block">
         <div class="page_width">
             <h2>Галерея</h2>
             <div class="gallery_slider">
