--- a/about.html
+++ b/about.html
@@ -43,6 +43,20 @@
 					</li>
 					<li>
 						<a href="direction.html">Направления</a>
+						<ul>
+							<li><a href="direction_ditails.html">Ландшафтное проектирование и дизайн</a></li>
+							<li><a href="direction_ditails.html">Здоровье и активность пожилых людей</a></li>
+							<li><a href="direction_ditails.html">Городская парковая мебель</a></li>
+							<li><a href="direction_ditails.html">Озеленение</a></li>
+							<li><a href="direction_ditails.html">Освещение и wi-fi</a></li>
+							<li><a href="direction_ditails.html">Работы по благоустройству среды</a></li>
+							<li><a href="direction_ditails.html">Детские игровые площадки</a></li>
+							<li><a href="direction_ditails.html">Площадки для дрессировки и выгула собак</a></li>
+							<li><a href="direction_ditails.html">Малые Архитектурные Формы</a></li>
+							<li><a href="direction_ditails.html">Спортивные площадки и тренажеры</a></li>
+							<li><a href="direction_ditails.html">Покрытия для площадок</a></li>
+							<li><a href="direction_ditails.html">Конструкции для лазания</a></li>
+						</ul>
 					</li>
 					<li>
 						<a href="projects.html">Проекты</a>
